--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<!-- <main>
+<main>
     <nav>
         <ul>
             <li class="titulo"> <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a></li>
@@ -21,15 +21,13 @@
 
 
 
-
+<app-nosotros id="nosotros"></app-nosotros>
 <app-servicios id="servicios"></app-servicios>
 <app-servicios2></app-servicios2>
-
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
--->
-<app-nosotros id="nosotros"></app-nosotros>
+
 
 
 
