--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -75,9 +75,9 @@ a::after {
     position: absolute;
     left: 0;
     bottom: 0;
-    height: 3px; /* Altura de la barra */
+    height: 5px; /* Altura de la barra */
     width: 0; /* Ancho inicial de la barra */
-    background-color: black; /* Color de la barra */
+    background-color: white; /* Color de la barra */
     transition: width 0.5s ease-out; /* Transición */
 }
 
@@ -115,7 +115,8 @@ header .transparencia {
     width: 100%;
     height: 100%;
     z-index: 10;
-    background-color: #14141460;
+    background: linear-gradient(to bottom, #002150b7, #00215046);
+
 }
 
 header .titulo-2 {
