--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -47,3 +47,11 @@ footer {
 .column button:hover {
     background-color: rgb(0, 23, 128);
 }
+@media (max-width: 800px) {
+    .footer-container {
+        flex-direction: column;
+    }
+    .border-column{
+        border: 0;
+    }
+}
