--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -21,12 +21,17 @@
 
 
 
-<app-nosotros id="nosotros"></app-nosotros>
+
+
 <app-servicios id="servicios"></app-servicios>
-<app-servicios2></app-servicios2>
+<app-servicios2 id="servicios2"></app-servicios2>
+<app-nosotros id="nosotros"></app-nosotros>
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
+
+
+
 
 
 
