--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -36,16 +36,18 @@ footer {
 }
 
 .column button {
-    background-color: rgb(51, 51, 155);
+    background-color: #022454;
     color: white;
     padding: 10px 20px;
+    font-weight: bold;
     border: none;
     cursor: pointer;
     border-radius: 25px;
 }
 
 .column button:hover {
-    background-color: rgb(0, 23, 128);
+    background-color: rgb(192, 192, 192);
+    color: #022454;
 }
 @media (max-width: 800px) {
     .footer-container {
