--- a/src/app/components/nosotros/nosotros.component.css
+++ b/src/app/components/nosotros/nosotros.component.css
@@ -1,81 +1,102 @@
-.imagen-fondo{
+img {
+    width: 100%;
+    height: 50vh;
+    object-fit: cover;
+}
+
+h2, p{
     margin: 0;
     padding: 0;
-    height: 100vh;
-    width: 100%;
-    object-fit: cover;
-    position: absolute;
-    z-index:-1;
-    background-repeat: no-repeat;
+    border: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    padding: 10px 0;
+    text-shadow: 0 1px 3px rgb(0, 0, 0);
+}
+h2{
+    color: #2f75d8;
 }
 header{
- display: flex;
- height: 100vh;
- color: #3D7DD6;
- font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    padding-left: 30%;
+    position: relative;
+    background-image: url("/nosotros/nosotrosfondo.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: auto;
 }
-h2,p {
-    padding: 0;
-    margin: 0;
-    border: 0;
-}
-.nosotros{
+main{
+    background: linear-gradient(to bottom, #2458a5cb, #2458a58c);
+    height: auto;
     box-sizing: border-box;
     padding: 2vh 2vw;
 }
-.espacio{
-    width: 25%;
-    background-color: transparent;
-}
-.imagen-slide{
-    width: 100%;
-    height: 35vh;
-    object-fit: cover;
-}
-swiper-container{
-    width: 100%;
-    box-sizing: border-box;
-    padding: 3vh 3vw;
-}
-.contenido{
-    width: 75%;
-    height: 100%;
-    box-sizing: border-box; 
-    padding-top: 3vh;
-    background-color: #022454d5;
-}
-p{
-    color: white;
-    padding: 2vh 0;
-}
-.caja-boton{
-    width: 100%;
+.caja-button{
     display: flex;
     align-items: center;
     justify-content: center;
 }
 button{
+    font-family: Arial, Helvetica, sans-serif;
     width: 150px;
     height: 40px;
-    border-radius: 25px;
+    border-radius: 125px;
     border: 0;
     background-color: #022454;
     color: white;
     font-weight: bold;
+    transition: 500ms;
 }
 
-button:hover{
+.imagen-slide{
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgb(0, 0, 0);
+}
+
+button:active{
     color: #022454;
     background-color: white;
 }
-/* Estilos para dispositivos móviles */
-@media (max-width: 1000px) {
-    .espacio {
-        width: 0;
-        height: 0;
-      background-color: #3D7DD6;
-    }
-    .contenido{
+swiper-container{
+    width: 100%;
+    height:80vh;
+    padding-top: 20px;
+}
+
+.swiper-button-prev{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    left: 30%;
+    bottom: 0;
+    margin: auto;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+}
+.swiper-button-next{
+    position: absolute;
+    z-index: 10;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+}
+.swiper-button-next{
+    position: absolute;
+    z-index: 10;
+}
+
+@media (max-width: 800px) {
+    header {
         width: 100%;
+        padding: 0;
     }
-  }
+    .swiper-button-prev{
+        left: 0;
+    }
+}
