--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -16,7 +16,8 @@ img{
     width: 100%;
     height: 60vh;
     object-fit: cover;
-    box-shadow: 0 20px 50px rgb(0, 0, 0);
+    border-radius: 10px;
+    box-shadow: 0 2px 20px rgb(0, 0, 0);
 }
 
 
