--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -1,79 +1,78 @@
-main{
+header{
     font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
-    height: 100vh;
+    height: 700px;
+    background-image: url(/blog/1.jpg);
+    background-color: #18437F;
+    background-size: cover;
+    color: white;
 }
-p,h2,h1,h5{
-    border: 0;
+h2{
+    text-transform: uppercase;
     margin: 0;
-    padding: 0;
-    color: white;
-}
-
-h5{
-    padding: 30px 0;
-}
-
-h1{
-    display: flex;
-    height: 10vh;
-    justify-content: center;
-    align-items: center;
-    padding-left: 50px;
-    color: white;
-    position: absolute;
-    z-index: 50;
-
+    border: 0;
+    padding: 20px 0;
+    text-shadow: 0 1px 1px #2c2c2c;
 }
 .titulo{
-    display: flex;
-    color: white;
-    position: relative;
-    width: 100%;
-    height: 10vh;
-    justify-content: center;
-    align-items: center;
+    padding-left: 20px;
+    text-align: center;
+}
+p{
+    text-shadow: 0 1px 1px #2c2c2c;
+    padding: 0;
+    margin: 0;
 }
 img{
     width: 100%;
-    height: 50vh;
+    height: auto;
+    border-radius: 10px;
     object-fit: cover;
 }
-swiper-slide{
-    box-sizing: content-box;
-    padding: 0 1vw;
+
+main{
+    background-color: #18437fa6;
+    height: 100%;
 }
-.background-image{
-    width: 100%;
-    height: 100vh;
-    position: absolute;
-    background-color: #03214c9f;
-}
-.background-image img{
-    width: 100%;
-    height: 100vh;    
-    object-fit: cover;
-    position: absolute;
-    z-index: -1;
+
+
+.slide-principal{
+    width: 30%;
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: #86B9F7;
 }
 
 swiper-container{
-    height: 90vh;
+    width: 70%;
+    box-sizing: border-box;
+    padding: 20px;
 }
-
+swiper-slide{
+    margin-bottom: 60px;
+}
 button{
     font-weight: bold;
-    height: 40px;
-    width: 150px;
-    bottom: 3vh;
-    border: 0;
-    color: #fff;
-    background-color: #18437F;
     border-radius: 25px;
+    width: 200px;
+    height: 35px;
+    background-color: #18437F;
+    color: white;
+    border: 0px;
 }
 
 button:hover{
     background-color: #AFD0FE;
-    color: #18437F;
+    color: #18448F;
+}
+.titulo-blog{
+    height: 100px;
 }
 
+@media (max-width: 800px) {
+    main{
+        flex-direction: column;
+    }
+    .slide-principal{
+        width: 100%;
+    }
+}
