--- a/src/app/components/servicios2/servicios2.component.css
+++ b/src/app/components/servicios2/servicios2.component.css
@@ -1,42 +1,46 @@
-main {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
+header{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #86B9F7;
 }
+h2{
+    text-transform: uppercase;
+    text-shadow: 0 1px 1px #2c2c2c;
 
-.panel-1, .panel-2 {
-    width: 45%;
-    align-content: center;
-    height: 90%;
 }
-
-.panel-1 .img, .panel-2 .img {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
+.titulo{
+    padding-left: 20px;
+}
+p{
+    text-shadow: 0 1px 1px #2c2c2c;
 }
 img{
     width: 100%;
-    height: 100%;
-}
-p{ 
-   margin: 2px;
-   margin-bottom: 20px;
+    height: 30vh;
+    border-radius: 10px;
+    object-fit: cover;
 }
 
-h2{
-    color: #18437F;
-    text-transform: uppercase;
-    margin-bottom: 0;
-    padding-bottom: 0;
+main{
+    display: flex;
 }
 
+
+.slide-principal{
+    width: 30%;
+    box-sizing: border-box;
+    padding: 20px;
+    background-color: #86B9F7;
+}
+
+swiper-container{
+    width: 70%;
+    box-sizing: border-box;
+    padding: 100px 20px;
+}
+swiper-slide{
+    margin-bottom: 60px;
+}
 button{
+    font-weight: bold;
     border-radius: 25px;
     width: 200px;
     height: 35px;
@@ -48,4 +52,13 @@ button{
 button:hover{
     background-color: #AFD0FE;
     color: #18448F;
+}
+
+@media (max-width: 800px) {
+    main{
+        flex-direction: column;
+    }
+    .slide-principal{
+        width: 100%;
+    }
 }
