--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -9,7 +9,7 @@
             <li class="contacto"> <a  href="inicio#contacto">Contacto</a></li>
             <li class="banderaperu"> <a href=""><img class="imgperu"  src="/perubandera.png" alt=""></a></li>
             <li class="eeuubandera"> <a href=""><img class="imgeeuu"  src="/eeuubandera.png" alt=""></a></li>
-            <li class="whatsapp"> <a href=""><img class="imgwhatsapp" src="/whatsapp.png" alt=""></a></li>
+            <li class="whatsapp"> <a href="https://wa.link/p4pb6v"><img class="imgwhatsapp" src="/whatsapp.png" alt=""></a></li>
         </ul>
     </nav>
     <header>
