--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -1,4 +1,9 @@
 
+
+<app-nav-responsive></app-nav-responsive>
+
+
+
 <main>
     <nav>
         <ul>
@@ -19,13 +24,13 @@
     </header>
 
 </main>
-
 <app-servicios id="servicios"></app-servicios>
 <app-servicios2 id="servicios2"></app-servicios2>
 <app-nosotros id="nosotros"></app-nosotros>
 <app-galeria></app-galeria> 
 <app-blog></app-blog>
 <app-footer id="contacto"></app-footer>
+
 
 
 
