--- a/src/app/nav-responsive/nav-responsive.component.css
+++ b/src/app/nav-responsive/nav-responsive.component.css
@@ -8,6 +8,7 @@ ul {
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
+    flex-direction: column;
 }
 
 img {
@@ -16,7 +17,6 @@ img {
 
 li {
     height: 80px;
-    border-right: 3px solid #002150;
     position: relative; /* Necesario para el pseudo-elemento */
 }
 
@@ -82,8 +82,6 @@ a::after {
     bottom: 0;
     height: 5px; /* Altura de la barra */
     width: 0; /* Ancho inicial de la barra */
-    background-color: white; /* Color de la barra */
-    transition: width 0.5s ease-out; /* Transición */
 }
 
 /* Cambios en hover */
@@ -106,24 +104,6 @@ li a img {
     box-shadow: 2px 1px 10px rgb(255, 255, 255);
 }
 
-header {
-    width: 100%;
-    position: relative;
-    height: calc(100vh - 80px);
-}
-
-header img {
-    position: absolute;
-}
-
-header .transparencia {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    z-index: 10;
-    background: linear-gradient(to bottom, #002150b7, #00215046);
-
-}
 
 header .titulo-2 {
     bottom: 0;
@@ -132,19 +112,56 @@ header .titulo-2 {
     margin: 20px;
     z-index: 20;
 }
+svg{
+    width: 50px;
+    height: 50px;
+}
+
+.button-responsive{
+    background-color: #fff;
+    outline: 1px solid black;
+    border: 0;
+}
+.titulo-responsive{
+    display: flex;
+    height: 60px;
+}
+.imgtitulo{
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0 60px;
+}
+.titulo-responsive{
+    visibility: hidden;
+    position: absolute;
+}
+.navbar{
+    visibility: hidden;
+    position: absolute;
+}
 @media (max-width: 800px) {
-    ul {
-        flex-direction: column;
+    .titulo-responsive{
+        visibility: visible;
+        position: relative;
     }
-    li {
-        border: 0;
+    .navbar{
+        visibility: visible;
+        position: relative;
     }
-    nav {
+    .navbar {
         width: 100%;
-        visibility: hidden;
+        transform: translateX(-100vh);
+        transition: transform 0.3s ease;
         position: absolute;
-        z-index: -1;
+        z-index: 20;
+        background-color: white;
     }
+
+    .navbar.open {
+        transform: translateX(0); /* Mostrar el menú */
+        position: absolute;
+      } 
 
     .nosotros, .servicios, .titulo, .buscar, .contacto, .banderaperu, .eeuubandera {
         width: 100%;
