--- a/src/app/components/blog/blog.component.css
+++ b/src/app/components/blog/blog.component.css
@@ -1,6 +1,6 @@
 header{
     font-family: Arial, Helvetica, sans-serif;
-    height: 700px;
+    height: auto;
     background-image: url(/blog/1.jpg);
     background-color: #18437F;
     background-size: cover;
@@ -31,7 +31,7 @@ img{
 
 main{
     background-color: #18437fa6;
-    height: 100%;
+    height: auto;
 }
 
 
@@ -45,7 +45,6 @@ main{
 swiper-container{
     width: 70%;
     box-sizing: border-box;
-    padding: 20px;
 }
 swiper-slide{
     margin-bottom: 60px;
