--- a/src/app/nav-responsive/nav-responsive.component.css
+++ b/src/app/nav-responsive/nav-responsive.component.css
@@ -116,7 +116,12 @@ svg{
     width: 50px;
     height: 50px;
 }
-
+.container-responsive{
+    position: fixed;
+    width: 100%;
+    z-index: 500;
+    background-color: white;
+}
 .button-responsive{
     background-color: #fff;
     outline: 1px solid black;
@@ -161,7 +166,7 @@ svg{
     .navbar.open {
         transform: translateX(0); /* Mostrar el menú */
         position: absolute;
-      } 
+    } 
 
     .nosotros, .servicios, .titulo, .buscar, .contacto, .banderaperu, .eeuubandera {
         width: 100%;
