TERMINADO EL HOME PART1 AL 100%

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -77,10 +77,10 @@
             </ul>
             <ul>
                 <li><strong>FORMAS DE PAGO</strong></li>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
-                <a href=""><img src="" alt=""></a>
+                <a href=""><img width="50px" src="/footer/AMEXPRECISO.svg" alt=""></a>
+                <a href=""><img width="50px" src="/footer/LOGOVISAPRECISO.svg" alt=""></a>
+                <a href=""><img width="50px" src="/footer/MASTERCARDPRECISO.svg" alt=""></a>
+                <a href=""><img width="50px" src="" alt=""></a>
             </ul>
             <ul>
                 <li><strong>SÍGUENOS</strong></li>
