--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -30,7 +30,7 @@
     </nav>
     <header>
         <div class="transparencia"></div>
-        <img class="fondo" src="/inicio/cabecera.jpg" alt="">
+        <img class="fondo" src="/inicio/cabecera.webp" alt="">
         <img class="titulo-2" src="/principal/titulo-sinfondo.png" alt="">
     </header>
 
