--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -30,6 +30,7 @@
     </nav>
     <header>
         <div class="transparencia"></div>
+        <img class="titulo-2" src="/principal/Industry.png" alt="">
     </header>
 
 </main>
