--- a/src/app/components/inicio/inicio.component.css
+++ b/src/app/components/inicio/inicio.component.css
@@ -108,7 +108,7 @@ li a img {
 
 header {
     width: 100%;
-    background-image: url("/inicio/cabecera.webp");
+    background-image: url("/fondoprincipal.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -124,17 +124,19 @@ header .transparencia {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 20;
     background: linear-gradient(to bottom, #002150b7, #00215046);
 
 }
 
 header .titulo-2 {
-    bottom: 0;
+    position: absolute;
+    z-index: 25;
     right: 0;
+    bottom: 0;
     width: 30%;
-    margin: 20px;
-    z-index: 20;
+    height: auto;
+    padding: 50px;
 }
 @media (max-width: 800px) {
     ul {
