--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -8,7 +8,7 @@
                 </video>
                 <div class="subpanel-texto">
                     <img src="/principal/Industry.png" alt="">
-                    <button><a href="inicio">CONOCE MÁS</a></button>
+                    <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(expressVideo)" (mouseleave)="stopPreview()">
@@ -17,7 +17,7 @@
                 </video>
                 <div class="subpanel-texto">
                     <img src="/principal/Express.png" alt="">
-                    <button><a href="inicio">CONOCE MÁS</a></button> 
+                    <button routerLink="inicio">CONOCE MÁS</button> 
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(industryVideo)" (mouseleave)="stopPreview()">
@@ -26,7 +26,7 @@
                 </video>
                 <div class="subpanel-texto">
                     <img src="/principal/Consultants.png" alt=""> 
-                    <button><a href="inicio">CONOCE MÁS</a></button>
+                    <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
         </div>
