--- a/src/app/components/servicios2/servicios2.component.css
+++ b/src/app/components/servicios2/servicios2.component.css
@@ -1,64 +1,20 @@
 header{
-    font-family: Arial, Helvetica, sans-serif;
-}
-h2{
-    text-transform: uppercase;
-    text-shadow: 0 1px 1px #2c2c2c;
-
-}
-.titulo{
-    padding-left: 20px;
-}
-p{
-    text-shadow: 0 1px 1px #2c2c2c;
-}
-img{
-    width: 100%;
-    height: 30vh;
-    border-radius: 10px;
-    object-fit: cover;
-}
-
-main{
+    margin: 100px 0;
     display: flex;
-}
-
-
-.slide-principal{
-    width: 30%;
-    box-sizing: border-box;
-    padding: 20px;
-    background-color: #86B9F7;
+    flex-direction: column; 
+    padding: 0 8%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 swiper-container{
-    width: 70%;
-    box-sizing: border-box;
-    padding: 100px 20px;
+    width: 100%;
 }
-swiper-slide{
-    margin-bottom: 60px;
+main{
+   
 }
-button{
-    font-weight: bold;
-    border-radius: 25px;
-    width: 200px;
-    height: 35px;
-    background-color: #18437F;
-    color: white;
-    border: 0px;
-}
-
-button:hover{
-    background-color: #AFD0FE;
-    color: #18448F;
-}
-
-@media (max-width: 800px) {
-    main{
-        flex-direction: column;
-    }
-    .slide-principal{
-        width: 100%;
-    }
+img{
+    width: 100%;
+    height: 40vh;
+    border-radius: 10px;
+    object-fit: cover;
 }
