--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer-container">
         <div class="column">
-            <h1>GRUPO PRECISO</h1>
+            <h1 style="color:#022454">GRUPO PR<span style="color:#E16120">E</span>CISO</h1>
             <p>Ofrecemos servicios de calidad brindando atención personalizada</p>
             <button>SOLICITAR COTIZACION</button>
         </div>
@@ -33,7 +33,7 @@
                 <li>Mantenimiento</li>
                 <li>Seguimiento</li>
                 <li>Formularios</li>
-                <li>Consultas</li>
+                <li>Consulta</li>
                 </details>
             </ul>
             <ul class="lista-style">
