--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -44,7 +44,16 @@ footer {
     cursor: pointer;
     border-radius: 25px;
 }
-
+h1{
+    font-weight: bold;
+}
+li{
+    padding: 0px 18px;
+}
+summary{
+    margin-bottom: 10px;
+    color: #022454;
+}
 .column button:hover {
     background-color: rgb(192, 192, 192);
     color: #022454;
@@ -57,10 +66,14 @@ footer {
         border: 0;
     }
     .lista-style{
-        border-bottom: 2px solid gray;
     }
     summary{
         padding: 10px 0;
+        border-radius: 10px;
         background-color: rgb(212, 212, 212);
+    }
+
+    li{
+        padding: 0px 18px;
     }
 }
