--- a/src/app/nav-responsive/nav-responsive.component.html
+++ b/src/app/nav-responsive/nav-responsive.component.html
@@ -3,11 +3,12 @@
         <div class="titulo-responsive">
 
         
-        <button class="button-responsive"  (click)="toggleNavbar()">  <svg viewBox="0 0 100 80" width="40" height="40" fill="#002150">
+        <button class="button-responsive"  (click)="toggleNavbar()"> <svg viewBox="0 0 100 80" width="40" height="40" fill="#002150">
             <rect width="100" height="20" rx="10" ry="10"></rect> <!-- Borde redondeado con rx y ry -->
-            <rect y="30" width="100" height="20" rx="10" ry="10"></rect>
+            <rect y="30" width="100" height="20" rx="10" ry="10" fill="#E16120"></rect>
             <rect y="60" width="100" height="20" rx="10" ry="10"></rect>
         </svg>
+        
         </button>
             <a  href=""><img class="imgtitulo" src="/titulo.png" alt=""></a>
         </div>
