--- a/src/app/components/galeria/galeria.component.css
+++ b/src/app/components/galeria/galeria.component.css
@@ -2,6 +2,7 @@ h2{
     margin: 0;
     padding: 0;
     border: 0;
+    color:#18437F;
     height: 10vh;
     display: flex;
     align-items: center;
