--- a/src/app/components/servicios2/servicios2.component.css
+++ b/src/app/components/servicios2/servicios2.component.css
@@ -9,6 +9,12 @@ header{
 swiper-container{
     width: 100%;
 }
+h2{
+    text-transform: uppercase;
+    text-shadow: 0 1px 1px #2c2c2c;
+    color: #18437F;
+
+}
 main{
    
 }
