--- a/src/app/navegacion/navegacion.component.css
+++ b/src/app/navegacion/navegacion.component.css
@@ -8,7 +8,6 @@ ul {
     display: flex;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    flex-direction: column;
 }
 
 img {
@@ -17,6 +16,7 @@ img {
 
 li {
     height: 80px;
+    border-right: 3px solid #18437F;
     position: relative; /* Necesario para el pseudo-elemento */
 }
 
@@ -82,6 +82,8 @@ a::after {
     bottom: 0;
     height: 5px; /* Altura de la barra */
     width: 0; /* Ancho inicial de la barra */
+    background-color: white; /* Color de la barra */
+    transition: width 0.5s ease-out; /* Transición */
 }
 
 /* Cambios en hover */
@@ -89,7 +91,7 @@ a:hover::after {
     width: 100%; /* Ancho de la barra en hover */
 }
 a:hover{
-    background-color: #002150;
+    background-color: #18437F;
     color: white;
 }
 header .fondo {
@@ -104,69 +106,19 @@ li a img {
     box-shadow: 2px 1px 10px rgb(255, 255, 255);
 }
 
-
-header .titulo-2 {
-    bottom: 0;
-    right: 0;
-    width: 30%;
-    margin: 20px;
-    z-index: 20;
-}
-svg{
-    width: 50px;
-    height: 50px;
-}
-.container-responsive{
-    position: fixed;
-    width: 100%;
-    z-index: 100;
-    background-color: white;
-}
-.button-responsive{
-    background-color: #fff;
-    outline: 1px solid black;
-    border: 0;
-}
-.titulo-responsive{
-    display: flex;
-    height: 60px;
-}
-.imgtitulo{
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0 60px;
-}
-.titulo-responsive{
-    visibility: hidden;
-    position: absolute;
-}
-.navbar{
-    visibility: hidden;
-    position: absolute;
-}
 @media (max-width: 800px) {
-    .titulo-responsive{
-        visibility: visible;
-        position: relative;
+    ul {
+        flex-direction: column;
     }
-    .navbar{
-        visibility: visible;
-        position: relative;
+    li {
+        border: 0;
     }
-    .navbar {
+    nav {
         width: 100%;
-        transform: translateX(-100vw);
-        transition: transform 0.3s ease;
+        visibility: hidden;
         position: absolute;
-        z-index: 20;
-        background-color: white;
+        z-index: -1;
     }
-
-    .navbar.open {
-        transform: translateX(0); /* Mostrar el menú */
-        position: absolute;
-    } 
 
     .nosotros, .servicios, .titulo, .buscar, .contacto, .banderaperu, .eeuubandera {
         width: 100%;
