--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -45,6 +45,12 @@
 <app-footer id="contacto"></app-footer>
 -->
 <app-subservicios-1></app-subservicios-1>
+<app-subservicios-2></app-subservicios-2>
+<app-subservicios-3></app-subservicios-3>
+<app-subservicios-4></app-subservicios-4>
+<app-subservicios-5></app-subservicios-5>
+<app-subservicios-6></app-subservicios-6>
+<app-subservicios-7></app-subservicios-7>
 
 
 
