--- a/src/app/components/subservicio/subservicios-5/subservicios-5.component.html
+++ b/src/app/components/subservicio/subservicios-5/subservicios-5.component.html
@@ -1,1 +1,91 @@
-<p>subservicios-5 works!</p>
+<app-nav-responsive></app-nav-responsive>
+<app-navegacion></app-navegacion>
+<header>
+<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+</header>
+<main>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <div class="container-sub1">
+    <ol class="custom-icons">
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Diseño del sistema</li>
+        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+        </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Suministro de equipos</li>
+        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
+        </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Instalación de equipos</li>
+        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
+        </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Pruebas y puesta en marcha</li>
+        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
+        </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Mantenimiento y soporte técnico</li>
+        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+        </p>
+    </ol>
+    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <h2 class="titulo-5">¿Como lo hacemos?</h2>
+    <ol class="containersub-2">
+        <div class="container-2">
+        <img src="servicios2/subservicios1.jpg" alt="">
+        <p class="imgnum">1</p>
+        <li>Comparte con nosotros tus necesidades específicas. ¡Nos gustaría escucharte!</li>
+        </div>
+        <div class="container-2">
+        <img src="servicios2/subservicios2.jpg" alt="">
+        <p class="imgnum">2</p>
+        <li>
+            Agenda una visita técnica para evaluar tu situación y proporcionarte un presupuesto detallado.</li>
+        </div>
+        <div class="container-2">
+        <img src="servicios2/subservicios3.jpg" alt="">
+        <p class="imgnum">3</p>
+        <li>Nuestro equipo se encargará de diseñar e implementar la solución más adecuada para tu negocio.</li>
+        </div>
+    </ol>
+    <h2 class="titulo-3">Nuestros Servicios</h2>
+    <div class="containersub-3">
+        <img  class="img3" src="/servicios2/nuestrosservicios.jpg" alt="">
+        <div class="container-3">
+            <div class="container-servicios">
+            <div class="serviciosprincipales">
+            <li>
+                <img src="/icons/icono_logro.png" alt="">
+                Sistema de Utilización de Media y Baja Tensión</li>
+            <p>Diseñamos y ejecutamos sistemas eléctricos seguros y eficientes para aplicaciones industriales, comerciales y residenciales.</p>
+            </div>
+            <div class="serviciosprincipales">
+            <li>
+                <img src="/icons/icono_serviciov2.png" alt="">
+                Servicios Eléctricos de Baja Tensión</li>
+            <p>Ofrecemos una amplia gama de servicios eléctricos para instalaciones de baja tensión, asegurando la eficiencia y confiabilidad de su sistema eléctrico.</p></div></div>
+            <div class="container-servicios">
+            <div class="serviciosprincipales">
+            <li>
+                <img src="/icons/icono_mantenimiento-removebg-preview.png" alt="">
+                Mantenimiento de Subestaciones Eléctricas</li>
+            <p>Brindamos servicios integrales de mantenimiento para subestaciones eléctricas, garantizando su óptimo funcionamiento y seguridad.</p></div>
+            <div class="serviciosprincipales">
+            <li>
+                <img src="/icons/icono_diseñov3.png" alt="">
+                Tendido de Redes</li>
+            <p>Planificamos, insta lamos y mantenemos redes eléctricas para una distribución segura y eficiente de la energía eléctrica.</p></div></div>
+        </div>
+    </div>
+    <div class="container-4">
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
+        </h2>
+        <button>¡No dudes en contactarnos!</button>
+    </div>
+</main>
+<app-footer></app-footer>
