--- a/src/app/components/subservicios-1/subservicios-1.component.html
+++ b/src/app/components/subservicios-1/subservicios-1.component.html
@@ -1,7 +1,7 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
-<header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<header id="subservicios1">
+<h1>SERVICIO SISTEMA DE UTILIZACIÓN DE MEDIA Y BAJA TENSIÓN</h1>
 </header>
 <main>
     <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
