--- a/src/app/components/subservicios-7/subservicios-7.component.html
+++ b/src/app/components/subservicios-7/subservicios-7.component.html
@@ -1,39 +1,61 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>OTROS SERVICIOS</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, brindamos mas servicios</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+            Servicios de protección de energía eléctrica:</li>
+        <p>Realizamos estudios de coordinación de protecciones y pruebas de relé, además de implementar sistemas de protección homopolar contra falla a tierra para salvaguardar sus equipos de sobrecargas.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
+            Instalación y mantenimiento de grupos electrógenos:</li>
+        <p>Ofrecemos servicios de instalación y mantenimiento preventivo y correctivo de grupos electrógenos, con capacidades de hasta 1,100 KVA, incluyendo arranque manual o automático, así como mantenimiento de tableros de transferencia manual y automática.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
+            Gestiones de cambio de tarifa eléctrica:</li>
+        <p>Realizamos estudios basados en el cuadro de carga y consumo del cliente para optimizar su pago ofreciendo la posibilidad de acceder a servicios como clientes libres, lo que le genera al cliente un ahorro de hasta un 18% en promedio, dependiendo de su factor de carga.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
+            Diseño y construcción de líneas de media tensión:</li>
+        <p>Somos expertos en el diseño y
+            construcción de líneas eléctricas de media tensión y sus infraestructuras asociadas, contribuyendo a la transmisión y distribución eficiente de la energía eléctrica.            
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+            Instalación de banco de condensadores:</li>
+        <p>Implementamos bancos de condensadores para reducir o eliminar el consumo de energía reactiva, lo que se traduce en un ahorro en la facturación mensual de energía para nuestros clientes.
         </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Implementación de luminarias LED y sistemas fotovoltáicos.</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Mantenimiento y reparación de motores</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Instalación y mantenimiento de aire acondicionado</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Bombas y electrobombas</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Venta, instalación y configuración de equipos de video vigilancia</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Estudio de calidad de energía eléctrica</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Servicios generales</li>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/7.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
