--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -17,7 +17,7 @@
                 </video>
                 <div class="subpanel-texto">
                     <img src="/principal/Express.png" alt="">
-                    <button routerLink="inicio">CONOCE MÁS</button> 
+                    <button routerLink="subservicio1">CONOCE MÁS</button> 
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(industryVideo)" (mouseleave)="stopPreview()">
