--- a/src/app/components/subservicios-2/subservicios-2.component.html
+++ b/src/app/components/subservicios-2/subservicios-2.component.html
@@ -1,39 +1,27 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>SERVICIO MANTENIMIENTO DE SUBESTACIONES ELÉCTRICAS</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas de mantenimiento de subestaciones eléctricas.    </h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
-        </p>
+            Mantenimiento de Subestaciones Eléctricas</li>
+        <p>Realizamos verificaciones detalladas para determinar el estado de las subestaciones y planificar el mantenimiento necesario. Esto incluye la verificación de niveles de tensión, contactos, terminales, relés de protección, sensores de temperatura y celdas.</p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
-        </p>
+            Mantenimiento preventivo</li>
+        <p>Ejecutamos maniobras de desconexión, limpieza general del transformador y de la celda, mediciones de temperatura con cámara termográfica y nivel de aislamiento (megado), ajustes y verificaciones de terminales y relés de protección; y limpieza con solvente dieléctrico.</p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+            Mantenimiento correctivo</li>
+        <p>Diagnosticamos y corregimos fallos en subestaciones eléctricas, proporcionando informes técnicos detallados y certificados de operatividad firmados por ingenieros eléctricos colegiados.
         </p>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/2.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
@@ -83,8 +71,7 @@
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
-        </h2>
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de mantenimiento de subestaciones eléctricas que necesitas? ¡No dudes en contactarnos!</h2>
         <button>¡No dudes en contactarnos!</button>
     </div>
 </main>
