--- a/src/app/components/subservicios-3/subservicios-3.component.html
+++ b/src/app/components/subservicios-3/subservicios-3.component.html
@@ -1,39 +1,34 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>SERVICIOS ELÉCTRICOS DE BAJA TENSIÓN</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas de servicios eléctricos de baja tensión.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+            Servicios Eléctricos de Baja Tensión</li>
+        <p>Realizamos instalaciones eléctricas completas, desde el diseño y planificación hasta la ejecución, asegurando el cumplimiento de todas las normativas y estándares de calidad.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
+            Mantenimiento de tableros eléctricos</li>
+        <p>Proveemos servicios de mantenimiento preventivo y correctivo de tableros eléctricos, asegurando su óptimo funcionamiento y prolongando su vida útil.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
+            Instalación y mantenimiento de sistemas de iluminación</li>
+        <p>Instalamos y mantenemos sistemas de iluminación LED, mejorando la eficiencia energética y reduciendo costos operativos.
         </p>
-        <li class="subtitulo">
+            <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+            Sistemas de puesta a tierra</li>
+        <p>Diseñamos e implementamos sistemas de puesta a tierra para proteger los equipos eléctricos y electrónicos de descargas eléctricas y fallas.
         </p>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/3.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
@@ -83,7 +78,7 @@
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado de los servicios eléctricos de baja tensión que necesitas? ¡No dudes en contactarnos!
         </h2>
         <button>¡No dudes en contactarnos!</button>
     </div>
