--- a/src/app/components/subservicios-4/subservicios-4.component.html
+++ b/src/app/components/subservicios-4/subservicios-4.component.html
@@ -1,26 +1,35 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>SERVICIO TENDIDO DE REDES PARA HABILITACIONES URBANAS</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y solucionamos problemas del servicio de tendido de redes.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+            Diseño y planificación</li>
+        <p>Realizamos un estudio exhaustivo del terreno y las necesidades del cliente para diseñar redes eléctricas optimizadas. Solicitud de la factibilidad del suministro y punto de diseño con el concesionario eléctrico
+            Elaboración del expediente técnico de la red primaria para su presentación y aprobación por el concesionario eléctrico            
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
+        <p>Suministro de equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
+            <br>Suministro de equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
+            <br>Suministro de equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
+            <br>Suministro de conductores, postes y luminarias de alumbrado público
+            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
+            Instalación de cables y equipos</li>
+        <p>Instalación de los equipos y materiales de la Red eléctrica primaría desde el punto de diseño del concesionario hasta el predio (acometida eléctrica)
+            <br>Instalación de los equipos y materiales de la Red eléctrica secundaria interna, incluye subestación/es en media tensión
+            <br>Instalación de los equipos y materiales para la red secundaria en baja tensión, hasta el murete porta medidor de cada lote/casa
+            <br>Instalación de conductores, postes y luminarias de alumbrado público
+            <br>Suministro de conductores, tomacorrientes y sockets de cada casa            
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
@@ -29,11 +38,11 @@
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+            Mantenimiento y monitoreo</li>
+        <p>Ofrecemos servicios de mantenimiento y monitoreo continuo para asegurar la estabilidad y confiabilidad de la red eléctrica.  
         </p>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/4.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
@@ -83,7 +92,7 @@
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de tendido de redes que necesitas? ¡No dudes en contactarnos!
         </h2>
         <button>¡No dudes en contactarnos!</button>
     </div>
