--- a/src/app/components/subservicios-5/subservicios-5.component.css
+++ b/src/app/components/subservicios-5/subservicios-5.component.css
@@ -15,7 +15,7 @@ main{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 header{
-    background-image: url("/servicios/1.jpg");
+    background-image: url("/servicios/5.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -36,6 +36,9 @@ header h1{
     background-color: #18437fb9;
     color: white;
     text-shadow: 1px 1px 1px #000;
+}
+p li{
+    font-size: 20px;
 }
 ol{
     list-style: none;
