--- a/src/app/components/subservicios-5/subservicios-5.component.html
+++ b/src/app/components/subservicios-5/subservicios-5.component.html
@@ -1,39 +1,40 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>SERVICIO MANTENIMIENTO DE TABLEROS ELÉCTRICOS</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos mantenimiento de tableros eléctricos.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+            Mantenimiento De Tableros Eléctricos</li>
+        <p>Realizamos el mantenimiento rutinario de los tableros eléctricos como la forma ideal de garantizar el buen funcionamiento de las instalaciones eléctricas. Estos dispositivos son fundamentales para el normal funcionamiento de los fluidos eléctricos en plantas industriales, residenciales, de viviendas y comerciales.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
+            Mantenimiento Preventivo de Tableros Eléctricos</li>
+        <p>En nuestro servicio de mantenimiento preventivo de tableros eléctricos, nos aseguramos de mantener un óptimo funcionamiento de las instalaciones eléctricas.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
+            Mantenimiento Correctivo de Tableros Eléctricos</li>
+        <p>En nuestro servicio de mantenimiento correctivo de tableros eléctricos, nos comprometemos a resolver cualquier problema que pueda surgir en las instalaciones eléctricas. 
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
-        </p>
-        <li class="subtitulo">
-            <img src="bitmap.svg" alt="">
-            Mantenimiento y soporte técnico</li>
-        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
-        </p>
+            Inspección De Tableros Eléctricos</li>
+        <p>En nuestro servicio de inspección de tableros eléctricos, llevamos a cabo una evaluación exhaustiva para garantizar su correcto funcionamiento. A continuación, describimos los pasos y entregables incluidos en este servicio:
+            <li> <img src="bitmap.svg" alt="">Visita técnica realizada por nuestros técnicos
+        </li>
+        <li> <img src="bitmap.svg" alt="">Identificación del tipo de tablero a intervenir: generales, distribución o
+            transferencia.
+            </li>
+        <li> <img src="bitmap.svg" alt="">Elaboración de informe técnico del mantenimiento de tableros eléctricos.
+        </li></p>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/5.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
@@ -83,7 +84,7 @@
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio Mantenimiento De Tableros Eléctricos ? ¡No dudes en contactarnos!
         </h2>
         <button>¡No dudes en contactarnos!</button>
     </div>
