--- a/src/app/components/subservicios-6/subservicios-6.component.html
+++ b/src/app/components/subservicios-6/subservicios-6.component.html
@@ -1,39 +1,72 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
 <header>
-<h1>Sistema de Utilización de Media y Baja Tensión</h1>
+<h1>SERVICIO POZO A TIERRA</h1>
 </header>
 <main>
-    <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
+    <h2 class="titulo-2">En Preciso, realizamos pozos a tierra.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Diseño del sistema</li>
-        <p>Realizamos el diseño e Ingeniería del Sistema de utilización en Media y baja tensión: solicitamos la factibilidad del suministro y el punto de diseño, elaboración del expediente técnico y la aprobación del concesionario, brindamos el suministro de los equipos y materiales para el sistema de utilización, así como realizamos el montaje del sistema de utilización en media y baja tensión.
+            Pozos a Tierra</li>
+        <p>En Preciso, te ofrecemos todo el detalle del diseño técnico del pozo a tierra (tipo de varilla, características, profundidad, camas que se han realizado de tierras, dimensiones de las varillas con el conector A/B, etc). Además, los certificados que emitimos son válidos para INDECI, auditorías y para obtener la licencia de funcionamiento.
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Suministro de equipos</li>
-        <p>Vendemos los conductores eléctricos, los transformadores, las celdas y todos los equipos y materiales necesarios y aprobados por el concesionario en el expediente técnico.
-        </p>
+            Construcción e Instalación</li>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Instalación de equipos</li>
-        <p>Instalamos todos los equipos y materiales que forman parte de la red externa, la red interna y la subestación en media tensión, así como los tableros en baja tensión.
-        </p>
+            Mantenimiento a Pozo a Tierra</li>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
-            Pruebas y puesta en marcha</li>
-        <p>Realizamos pruebas de funcionamiento en conjunto con la concesionaria y aseguramos la puesta en marcha del sistema de utilización en media tensión.
+            Tipos de Pozo a tierra</li>
+        <p>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Pozos a tierra con electrodos verticales:</li>
+                <span>Utilizados en áreas con espacio limitado o suelos con baja resistividad. Consisten en varillas de cobre o acero revestido de cobre que se clavan verticalmente en el suelo.</span>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Pozos a tierra con placas horizontales:</li>
+                <span>Utilizados en suelos con alta resistividad. Consisten en placas metálicas enterradas horizontalmente a una profundidad específica.</span>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Pozos a tierra con geles o bentonita:</li>
+                <span>Empleados para mejorar la conductividad del suelo en áreas con alta resistividad. Involucran el uso de materiales que retienen humedad alrededor del electrodo.</span>
+            <li class="subtitulo">
+                <img src="bitmap.svg" alt="">
+                Tipos de Pozo a tierra</li>
         </p>
         <li class="subtitulo">
             <img src="bitmap.svg" alt="">
             Mantenimiento y soporte técnico</li>
         <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
         </p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Sistemas eléctricos residenciales:</li>
+        <p>Para proteger los electrodomésticos y personas de fallas eléctricas.
+        </p>
+        <h2>Aplicaciones</h2>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Infraestructuras comerciales e industriales:</li>
+            <p>Infraestructuras comerciales e industriales:</p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Telecomunicaciones:</li>
+            <p>Para asegurar la correcta operación de equipos de comunicación y evitar interferencias.</p>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            ¡Estamos comprometidos con la seguridad y la eficiencia de tus instalaciones eléctricas!</li>
+        <li class="subtitulo">
+            <img src="bitmap.svg" alt="">
+            Mantenimiento y soporte técnico</li>
+        <p>Ofrecemos servicios de mantenimiento preventivo y correctivo para garantizar la continuidad y eficiencia del sistema.
+        </p>
     </ol>
-    <img class="imgsubservicio" src="/servicios/1.jpg" alt=""></div>
+    <img class="imgsubservicio" src="/servicios/6.jpg" alt=""></div>
     <h2 class="titulo-5">¿Como lo hacemos?</h2>
     <ol class="containersub-2">
         <div class="container-2">
@@ -83,7 +116,7 @@
         </div>
     </div>
     <div class="container-4">
-        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de sistema de utilización de media y baja tensión que necesitas? ¡No dudes en contactarnos!
+        <h2 class="titulo-4">¿Te gustaría que te brindemos un diagnóstico completo y detallado del servicio de pozo a tierra que necesitas? ¡No dudes en contactarnos!
         </h2>
         <button>¡No dudes en contactarnos!</button>
     </div>
