Por Revizar PrecisoGroup

--- a/src/app/components/subservicios-1/subservicios-1.component.html
+++ b/src/app/components/subservicios-1/subservicios-1.component.html
@@ -1,9 +1,9 @@
 <app-nav-responsive></app-nav-responsive>
 <app-navegacion></app-navegacion>
-<header id="subservicios1">
+<header>
 <h1>SERVICIO SISTEMA DE UTILIZACIÓN DE MEDIA Y BAJA TENSIÓN</h1>
 </header>
-<main>
+<main id="subservicios1">
     <h2 class="titulo-2">En Preciso, realizamos instalaciones nuevas y resolvemos problemas en sistemas de utilización de media y baja tensión.</h2>
     <div class="container-sub1">
     <ol class="custom-icons">
