--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -10,10 +10,10 @@
             <ul class="lista-style">
                 <details [open]="isDetailsOpen">
                 <summary>INICIO</summary>
-                <li>Nosotros</li>
-                <li>Servicios</li>
-                <li>Contacto</li>
-                <li>Buscar</li>                          
+                <li><a href="javascript:void(0)" (click)="scrollToNosotros($event)">Nosotros</a> </li>
+                <li><a href="javascript:void(0)" (click)="scrollToServicio($event)">Servicios</a> </li>
+                <li><a href="https://wa.link/j87pss">Contacto</a></li>
+                <li><a href="/inicio">Buscar</a></li>                          
                 </details>
             </ul>
 
