--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -3,29 +3,38 @@
         <div class="titulo"><img src="titulo.png" alt=""></div>
         <div class="imagenes">
             <div class="subpanel" (mouseenter)="startPreview(consultantsVideo)" (mouseleave)="stopPreview()">
-                <video #consultantsVideo muted autoplay loop>
-                    <source src="/videos/industry.mp4" type="video/mp4">
-                </video>
+                <div class="video-container">
+                    <img #consultantsPreview src="/images/consultants-preview.jpg" alt="Consultants Preview" class="video-placeholder">
+                    <video #consultantsVideo muted loop (loadeddata)="hidePlaceholder(consultantsPreview)">
+                        <source src="/videos/industry.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/Industry.png" alt="">
+                    <img src="/principal/preciso7.svg" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(expressVideo)" (mouseleave)="stopPreview()">
-                <video #expressVideo muted autoplay loop>
-                    <source src="/videos/express.mp4" type="video/mp4">
-                </video>
+                <div class="video-container">
+                    <img #expressPreview src="/images/express-preview.jpg" alt="Express Preview" class="video-placeholder">
+                    <video #expressVideo muted loop (loadeddata)="hidePlaceholder(expressPreview)">
+                        <source src="/videos/express.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/Express.png" alt="">
-                    <button routerLink="subservicio1">CONOCE MÁS</button> 
+                    <img src="/principal/preciso8.svg" alt="">
+                    <button routerLink="subservicio1">CONOCE MÁS</button>
                 </div>
             </div>
             <div class="subpanel" (mouseenter)="startPreview(industryVideo)" (mouseleave)="stopPreview()">
-                <video #industryVideo muted autoplay loop>
-                    <source src="/videos/consultants.mp4" type="video/mp4">
-                </video>
+                <div class="video-container">
+                    <img #industryPreview src="/images/industry-preview.jpg" alt="Industry Preview" class="video-placeholder">
+                    <video #industryVideo muted loop (loadeddata)="hidePlaceholder(industryPreview)">
+                        <source src="/videos/consultants.mp4" type="video/mp4">
+                    </video>
+                </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/Consultants.png" alt=""> 
+                    <img src="/principal/preciso9.svg" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
