--- a/src/app/principal/principal.component.css
+++ b/src/app/principal/principal.component.css
@@ -4,6 +4,7 @@
     background-color: #141414;
     overflow: hidden; /* Hide any overflowing content */
     font-family: Arial, Helvetica, sans-serif;
+    
   }
   
   .titulo {
@@ -67,7 +68,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: end;
-    background-color: rgba(1, 18, 42, 0.5);
+    background-color: #01122a46;
   }
   .subpanel-texto img{
     width: 50%;
