--- a/src/app/principal/principal.component.html
+++ b/src/app/principal/principal.component.html
@@ -10,7 +10,7 @@
                     </video>
                 </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/preciso7.svg" alt="">
+                    <img src="/principal/Industry.png" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                     </video>
                 </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/preciso8.svg" alt="">
+                    <img src="/principal/Express.png" alt="">
                     <button routerLink="subservicio1">CONOCE MÁS</button>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                     </video>
                 </div>
                 <div class="subpanel-texto">
-                    <img src="/principal/preciso9.svg" alt="">
+                    <img src="/principal/Consultants.png" alt="">
                     <button routerLink="inicio">CONOCE MÁS</button>
                 </div>
             </div>
