--- a/src/app/components/inicio/inicio.component.html
+++ b/src/app/components/inicio/inicio.component.html
@@ -15,7 +15,7 @@
                     <defs>
                       <style>
                         .cls-1 {
-                          fill: #00c307;
+                          fill: #09c70f;
                         }
                       </style>
                     </defs>
